--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -10,18 +10,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  checkout:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Run a one-line script
-      run: echo Hello, world!
+  process:
+    runs-on: ubuntu-latest
+    steps:  
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-    - name: Run a multi-line script
-      run: |
-        echo Add other Actions to build
-        echo test, and deploy your project
+      - name: Run a multi-line script
+        run: |
+          echo Add other Actions to build
+          echo test, and deploy your project
 
