--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -25,4 +25,10 @@ jobs:
         run: |
           echo Add other Actions to build
           echo test, and deploy your project
+  
+  report-url:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Report URL
+        run: echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
 
