--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -31,4 +31,11 @@ jobs:
     steps:
       - name: Report URL
         run: echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+  
+  report-os:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Report OS
+        if: runner.os == 'Windows'
+        run: echo "The runner's operating system is $RUNNER_OS""
 
